sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:9: error: not found: value round
			setValeur(j,round(gap))
                                    ^