sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort() {
	var gap=getNombreValeurs()/2
	for(i<-1 to getNombreValeurs()-1)
	{
		val temp=getValeur(i)
		var j=i
		while(gap>0){
			setValeur(j,round(gap))
			j=j-1
			gap=gap/2
		}
		setValeur(j,temp)
	}
}
